# ComfyUI_Sizepresets

./: README.md  __init__.py  nodes.py  presets.py  pyproject.toml  requirements.txt  update_plugin.py  utils.py
web/: resolution_presets.js
workflow_examples/: basic_workflow.json
