[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-resolution-presets"
version = "1.0.0"
description = "Professional resolution presets plugin for ComfyUI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["comfyui", "ai", "resolution", "image-processing", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-ResolutionPresets"
Repository = "https://github.com/yourusername/ComfyUI-ResolutionPresets"
Issues = "https://github.com/yourusername/ComfyUI-ResolutionPresets/issues"

[tool.setuptools]
packages = ["resolution_presets"]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]